Renommage des variables

--- a/Projet_BI_BigData.ipynb
+++ b/Projet_BI_BigData.ipynb
@@ -12,19 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "47964b1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Anaconda3\\lib\\site-packages\\xgboost\\compat.py:36: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import MultiIndex, Int64Index\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -78,17 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "55335a27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dico = pd.read_excel('C:/Users/106443/Downloads/dictionnaire_de_données.xlsx')"
+    "dico = pd.read_excel('C:/Users/Admin/Desktop/Projet_BigData/equipe1-projetbigdatabi2022/dictionnaire_de_données.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "714ba092",
    "metadata": {},
    "outputs": [
@@ -244,7 +235,7 @@
        "[80 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,9 +259,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv(\"C:/Users/106443/Downloads/train.csv\")\n",
-    "df_test = pd.read_csv(\"C:/Users/106443/Downloads/test.csv\")\n",
-    "df_test_sub = pd.read_csv(\"C:/Users/106443/Downloads/sample_submission.csv\")"
+    "df_train = pd.read_csv(\"C:/Users/Admin/Desktop/Projet_BigData/equipe1-projetbigdatabi2022/Data/train.csv\")\n",
+    "df_test = pd.read_csv(\"C:/Users/Admin/Desktop/Projet_BigData/equipe1-projetbigdatabi2022/Data/test.csv\")\n",
+    "df_test_sub = pd.read_csv(\"C:/Users/Admin/Desktop/Projet_BigData/equipe1-projetbigdatabi2022/Data/sample_submission.csv\")"
    ]
   },
   {
@@ -1429,9 +1420,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "696a579c",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1534,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "edb74b59",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1533,7 @@
        "(2919, 81)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1571,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "5821bb84",
    "metadata": {
     "scrolled": true
@@ -1678,7 +1667,7 @@
        "      <td>2919.000000</td>\n",
        "      <td>2919.000000</td>\n",
        "      <td>2919.000000</td>\n",
-       "      <td>1460.000000</td>\n",
+       "      <td>2919.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
@@ -1719,7 +1708,7 @@
        "      <td>50.825968</td>\n",
        "      <td>6.213087</td>\n",
        "      <td>2007.792737</td>\n",
-       "      <td>180921.195890</td>\n",
+       "      <td>180052.854647</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -1760,7 +1749,7 @@
        "      <td>567.402211</td>\n",
        "      <td>2.714762</td>\n",
        "      <td>1.314964</td>\n",
-       "      <td>79442.502883</td>\n",
+       "      <td>57381.565721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -1842,7 +1831,7 @@
        "      <td>0.000000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>2007.000000</td>\n",
-       "      <td>129975.000000</td>\n",
+       "      <td>154795.084126</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -1883,7 +1872,7 @@
        "      <td>0.000000</td>\n",
        "      <td>6.000000</td>\n",
        "      <td>2008.000000</td>\n",
-       "      <td>163000.000000</td>\n",
+       "      <td>176734.841494</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -1924,7 +1913,7 @@
        "      <td>0.000000</td>\n",
        "      <td>8.000000</td>\n",
        "      <td>2009.000000</td>\n",
-       "      <td>214000.000000</td>\n",
+       "      <td>191895.744157</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -2043,17 +2032,17 @@
        "max      1012.000000   508.000000   576.000000   800.000000  17000.000000   \n",
        "\n",
        "            MoSold       YrSold      SalePrice  \n",
-       "count  2919.000000  2919.000000    1460.000000  \n",
-       "mean      6.213087  2007.792737  180921.195890  \n",
-       "std       2.714762     1.314964   79442.502883  \n",
+       "count  2919.000000  2919.000000    2919.000000  \n",
+       "mean      6.213087  2007.792737  180052.854647  \n",
+       "std       2.714762     1.314964   57381.565721  \n",
        "min       1.000000  2006.000000   34900.000000  \n",
-       "25%       4.000000  2007.000000  129975.000000  \n",
-       "50%       6.000000  2008.000000  163000.000000  \n",
-       "75%       8.000000  2009.000000  214000.000000  \n",
+       "25%       4.000000  2007.000000  154795.084126  \n",
+       "50%       6.000000  2008.000000  176734.841494  \n",
+       "75%       8.000000  2009.000000  191895.744157  \n",
        "max      12.000000  2010.000000  755000.000000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2083,7 +2072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "5da5f0c5",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2091,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2118,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "16c35bd4",
    "metadata": {
     "scrolled": true
@@ -2624,15 +2613,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "ee4ef022",
    "metadata": {},
    "outputs": [],
    "source": [
     "# On renomme les modalités ayant un nom peu explicite\n",
-    "df.rename(columns={'nombre_niveau': 'nbre_etage',\n",
-    "                   'tr002_type_batiment_description' : 'type_batiment',\n",
-    "                   'tr001_modele_dpe_type' : 'type_bien'\n",
+    "df.rename(columns={'Id': 'ID',\n",
+    "                   'MSSubClass' : 'classe_bat',\n",
+    "                   'MSZoning' : 'classe_zone_bat',\n",
+    "                   'LotFrontage': 'dist_pied_rue',\n",
+    "                   'LotArea' : 'taille_pied2_bat',\n",
+    "                   'Street' : 'type_acces_route',\n",
+    "                   'Alley': 'type_acces_ruelle',\n",
+    "                   'LotShape' : 'forme_bat',\n",
+    "                   'LandContour' : 'forme_terrain',\n",
+    "                   'Utilities': 'types_servpublic',\n",
+    "                   'LotConfig' : 'config_lot',\n",
+    "                   'LandSlope' : 'pente',\n",
+    "                   'Neighborhood': 'Neighborhood',\n",
+    "                   'Condition1' : 'proxi_diverses1',\n",
+    "                   'Condition2' : 'proxi_diverses2',\n",
+    "                   'BldgType': 'type_logement',\n",
+    "                   'HouseStyle' : 'style_habitation',\n",
+    "                   'OverallQual' : 'eval_materiaux_finition',\n",
+    "                   'OverallCond': 'eval_etatg',\n",
+    "                   'YearBuilt' : 'annee_construction',\n",
+    "                   'YearRemodAdd' : 'date_remodelage',\n",
+    "                   'RoofStyle': 'type_toit',\n",
+    "                   'RoofMatl' : 'materiau_toiture',\n",
+    "                   'Exterior1st' : 'revetement_ext',\n",
+    "                   'Exterior2nd': 'revetement_ext2',\n",
+    "                   'MasVnrType' : 'type_placage',\n",
+    "                   'MasVnrArea' : 'zone_placage_m2',\n",
+    "                   'ExterQual ': 'quali_materiau_ext',\n",
+    "                   'ExterCond ' : 'etat_materiau_ext',\n",
+    "                   'Foundation' : 'type_fondation',\n",
+    "                   'BsmtQual ' : 'eval_hauteur_sous-sol',\n",
+    "                   'BsmtCond ' : 'eval_etat_sous-sol',\n",
+    "                   'BsmtExposure ': 'ref_murs_jardin',\n",
+    "                   'BsmtFinType1 ' : 'eval_surface_sous-sol',\n",
+    "                   'BsmtFinSF1 ' : 'm2',\n",
+    "                   'BsmtFinType2 ' : 'eval_surface_sous-sol',\n",
+    "                   'BsmtUnfSF ': 'm2_nonfinis-sous-sol',\n",
+    "                   'TotalBsmtSF ' : 'm2_sous-sol',\n",
+    "                   'Heating' : 'type_chauffage',\n",
+    "                   'HeatingQC': 'qualité_chauffage',\n",
+    "                   'CentralAir' : 'clim_centrale',\n",
+    "                   'Electrical' : 'syst_electrique',\n",
+    "                   '1stFlrSF ': 'm2_etage1',\n",
+    "                   '2ndFlrSF ' : 'm2_etage2',\n",
+    "                   'LowQualFinSF ' : 'm2_bassequali',\n",
+    "                   'GrLivArea ' : 'surface_habit_sous-sol',\n",
+    "                   'BsmtFullBath ': 'salledebain_sous-sol',\n",
+    "                   'BsmtHalfBath ' : 'demi_salledebain_sous-sol',\n",
+    "                   'FullBath' : 'salledebain',\n",
+    "                   'HalfBath': 'demi_salledebain',\n",
+    "                   'Bedroom' : 'chambre',\n",
+    "                   'Kitchen' : 'cuisine',\n",
+    "                   'KitchenQual': 'quali_cuisine',\n",
+    "                   'TotRmsAbvGrd ' : 'nb_piece_sous-sol',\n",
+    "                   'Functional' : 'fontionnement_maison',\n",
+    "                   'Fireplaces' : 'nb_foyers',\n",
+    "                   'FireplaceQu': 'qualite_foyers',\n",
+    "                   'GarageType ' : 'emplacement_garage',\n",
+    "                   'GarageYrBlt ' : 'annee_contruct_garage',\n",
+    "                   'GarageFinish ': 'finition_garage',\n",
+    "                   'GarageCars' : 'nb_voiture_garage',\n",
+    "                   'GarageArea' : 'garage_pied2',\n",
+    "                   'GarageQual': 'quali_garage',\n",
+    "                   'GarageCond' : 'etat_garage',\n",
+    "                   'PavedDrive' : 'allee_pavee',\n",
+    "                   'WoodDeckSF ': 'surface_terrasse_pied2',\n",
+    "                   'OpenPorchSF ' : 'surface_porche_o_pied2',\n",
+    "                   'EnclosedPorch ' : 'surface_porche_f_pied2',\n",
+    "                   '3SsnPorch ': 'surface_porche3s_pied2',\n",
+    "                   'ScreenPorch' : 'surface_veranda',\n",
+    "                   'PoolArea' : 'surface_piscine_pied2',\n",
+    "                   'PoolQC': 'quali_piscine',\n",
+    "                   'Fence' : 'quali_clotures',\n",
+    "                   'MiscFeature' : 'carac_diverse',\n",
+    "                   'MiscVal' : 'valeur_elem_divers',\n",
+    "                   'MoSold' : 'mois_vendu',\n",
+    "                   'YrSold': 'annee_vente',\n",
+    "                   'SaleType' : 'type_vente',\n",
+    "                   'SaleCondition' : 'condition_vente',\n",
+    "                   'SalePrice' : 'prix_habitation'\n",
     "                   },\n",
     "                   inplace=True)"
    ]
@@ -2647,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "baa876b6",
    "metadata": {
     "scrolled": true
@@ -2657,99 +2723,99 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Id                 0\n",
-      "MSSubClass         0\n",
-      "MSZoning           4\n",
-      "LotFrontage      486\n",
-      "LotArea            0\n",
-      "                ... \n",
-      "MoSold             0\n",
-      "YrSold             0\n",
-      "SaleType           1\n",
-      "SaleCondition      0\n",
-      "SalePrice          0\n",
+      "ID                    0\n",
+      "classe_bat            0\n",
+      "classe_zone_bat       4\n",
+      "dist_pied_rue       486\n",
+      "taille_pied2_bat      0\n",
+      "                   ... \n",
+      "mois_vendu            0\n",
+      "annee_vente           0\n",
+      "type_vente            1\n",
+      "condition_vente       0\n",
+      "prit_habitation       0\n",
       "Length: 81, dtype: int64\n",
-      "Id                0.00\n",
-      "MSSubClass        0.00\n",
-      "MSZoning          0.14\n",
-      "LotFrontage      16.65\n",
-      "LotArea           0.00\n",
-      "Street            0.00\n",
-      "Alley            93.22\n",
-      "LotShape          0.00\n",
-      "LandContour       0.00\n",
-      "Utilities         0.07\n",
-      "LotConfig         0.00\n",
-      "LandSlope         0.00\n",
-      "Neighborhood      0.00\n",
-      "Condition1        0.00\n",
-      "Condition2        0.00\n",
-      "BldgType          0.00\n",
-      "HouseStyle        0.00\n",
-      "OverallQual       0.00\n",
-      "OverallCond       0.00\n",
-      "YearBuilt         0.00\n",
-      "YearRemodAdd      0.00\n",
-      "RoofStyle         0.00\n",
-      "RoofMatl          0.00\n",
-      "Exterior1st       0.03\n",
-      "Exterior2nd       0.03\n",
-      "MasVnrType        0.82\n",
-      "MasVnrArea        0.79\n",
-      "ExterQual         0.00\n",
-      "ExterCond         0.00\n",
-      "Foundation        0.00\n",
-      "BsmtQual          2.77\n",
-      "BsmtCond          2.81\n",
-      "BsmtExposure      2.81\n",
-      "BsmtFinType1      2.71\n",
-      "BsmtFinSF1        0.03\n",
-      "BsmtFinType2      2.74\n",
-      "BsmtFinSF2        0.03\n",
-      "BsmtUnfSF         0.03\n",
-      "TotalBsmtSF       0.03\n",
-      "Heating           0.00\n",
-      "HeatingQC         0.00\n",
-      "CentralAir        0.00\n",
-      "Electrical        0.03\n",
-      "1stFlrSF          0.00\n",
-      "2ndFlrSF          0.00\n",
-      "LowQualFinSF      0.00\n",
-      "GrLivArea         0.00\n",
-      "BsmtFullBath      0.07\n",
-      "BsmtHalfBath      0.07\n",
-      "FullBath          0.00\n",
-      "HalfBath          0.00\n",
-      "BedroomAbvGr      0.00\n",
-      "KitchenAbvGr      0.00\n",
-      "KitchenQual       0.03\n",
-      "TotRmsAbvGrd      0.00\n",
-      "Functional        0.07\n",
-      "Fireplaces        0.00\n",
-      "FireplaceQu      48.65\n",
-      "GarageType        5.38\n",
-      "GarageYrBlt       5.45\n",
-      "GarageFinish      5.45\n",
-      "GarageCars        0.03\n",
-      "GarageArea        0.03\n",
-      "GarageQual        5.45\n",
-      "GarageCond        5.45\n",
-      "PavedDrive        0.00\n",
-      "WoodDeckSF        0.00\n",
-      "OpenPorchSF       0.00\n",
-      "EnclosedPorch     0.00\n",
-      "3SsnPorch         0.00\n",
-      "ScreenPorch       0.00\n",
-      "PoolArea          0.00\n",
-      "PoolQC           99.66\n",
-      "Fence            80.44\n",
-      "MiscFeature      96.40\n",
-      "MiscVal           0.00\n",
-      "MoSold            0.00\n",
-      "YrSold            0.00\n",
-      "SaleType          0.03\n",
-      "SaleCondition     0.00\n",
-      "SalePrice         0.00\n"
+      "ID                          0.00\n",
+      "classe_bat                  0.00\n",
+      "classe_zone_bat             0.14\n",
+      "dist_pied_rue              16.65\n",
+      "taille_pied2_bat            0.00\n",
+      "type_acces_route            0.00\n",
+      "type_acces_ruelle          93.22\n",
+      "forme_bat                   0.00\n",
+      "forme_terrain               0.00\n",
+      "types_servpublic            0.07\n",
+      "config_lot                  0.00\n",
+      "pente                       0.00\n",
+      "Neighborhood                0.00\n",
+      "proxi_diverses1             0.00\n",
+      "proxi_diverses2             0.00\n",
+      "type_logement               0.00\n",
+      "style_habitation            0.00\n",
+      "eval_materiaux_finition     0.00\n",
+      "eval_etatg                  0.00\n",
+      "annee_construction          0.00\n",
+      "date_remodelage             0.00\n",
+      "type_toit                   0.00\n",
+      "materiau_toiture            0.00\n",
+      "revetement_ext              0.03\n",
+      "revetement_ext2             0.03\n",
+      "type_placage                0.82\n",
+      "zone_placage_m2             0.79\n",
+      "ExterQual                   0.00\n",
+      "ExterCond                   0.00\n",
+      "type_fondation              0.00\n",
+      "BsmtQual                    2.77\n",
+      "BsmtCond                    2.81\n",
+      "BsmtExposure                2.81\n",
+      "BsmtFinType1                2.71\n",
+      "BsmtFinSF1                  0.03\n",
+      "BsmtFinType2                2.74\n",
+      "BsmtFinSF2                  0.03\n",
+      "BsmtUnfSF                   0.03\n",
+      "TotalBsmtSF                 0.03\n",
+      "type_chauffage              0.00\n",
+      "qualité_chauffage           0.00\n",
+      "clim_centrale               0.00\n",
+      "syst_electrique             0.03\n",
+      "1stFlrSF                    0.00\n",
+      "2ndFlrSF                    0.00\n",
+      "LowQualFinSF                0.00\n",
+      "GrLivArea                   0.00\n",
+      "BsmtFullBath                0.07\n",
+      "BsmtHalfBath                0.07\n",
+      "salledebain                 0.00\n",
+      "demi_salledebain            0.00\n",
+      "BedroomAbvGr                0.00\n",
+      "KitchenAbvGr                0.00\n",
+      "quali_cuisine               0.03\n",
+      "TotRmsAbvGrd                0.00\n",
+      "fontionnement_maison        0.07\n",
+      "nb_foyers                   0.00\n",
+      "qualite_foyers             48.65\n",
+      "GarageType                  5.38\n",
+      "GarageYrBlt                 5.45\n",
+      "GarageFinish                5.45\n",
+      "nb_voiture_garage           0.03\n",
+      "garage_pied2                0.03\n",
+      "quali_garage                5.45\n",
+      "etat_garage                 5.45\n",
+      "allee_pavee                 0.00\n",
+      "WoodDeckSF                  0.00\n",
+      "OpenPorchSF                 0.00\n",
+      "EnclosedPorch               0.00\n",
+      "3SsnPorch                   0.00\n",
+      "surface_veranda             0.00\n",
+      "surface_piscine_pied2       0.00\n",
+      "quali_piscine              99.66\n",
+      "quali_clotures             80.44\n",
+      "carac_diverse              96.40\n",
+      "valeur_elem_divers          0.00\n",
+      "mois_vendu                  0.00\n",
+      "annee_vente                 0.00\n",
+      "type_vente                  0.03\n",
+      "condition_vente             0.00\n",
+      "prit_habitation             0.00\n"
      ]
     }
    ],
