--- a/Projet_BigData.ipynb
+++ b/Projet_BigData.ipynb
@@ -6739,9 +6739,9 @@
     "grid = {\n",
     "    'n_estimators': [2000, 3000, 4000],\n",
     "    'subsample': [0.5], # Valeur conseillé dans la doc\n",
-    "    'nthread': [-1],\n",
-    "    'learning_rate' : [0.03],\n",
-    "    'max_depth' : [6]\n",
+    "    'nthread': [-1], # activer tout les coeurs du processeur\n",
+    "    'learning_rate' : [0.03,0.3], #Taux d'apprentissage pour l'algorithme de gradient boosting. Le diminuer limite le surapprentissage\n",
+    "    'max_depth' : [6,3]  #nombre de feuille par arbre\n",
     "}\n",
     "\n",
     "# Définir le modèle\n",
@@ -6827,7 +6827,7 @@
     "grid = { \n",
     "    'n_estimators': [2000, 3000, 4000],\n",
     "    'num_leaves': [4, 6], # Le nombre de feuille par arbre est défini a 31 d'origine on réduit a 10 sinon beaucoup trop long\n",
-    "    'nthread': [-1]\n",
+    "    'nthread': [-1] # activer tout les coeurs du processeur\n",
     "}\n",
     "\n",
     "# Définir le modèle\n",
@@ -7051,7 +7051,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "309f1b3a",
+   "id": "ef985f27",
    "metadata": {},
    "source": [
     "#### StackingCVRegressor"
@@ -7059,7 +7059,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "881f2260",
+   "id": "5ef3beaf",
    "metadata": {},
    "source": [
     "Le StackingCVRegressor est une technique d'ensemble qui permet de combiner les prédictions de plusieurs modèles de régression."
@@ -7068,7 +7068,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e85cd912",
+   "id": "10b86a0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -7168,7 +7168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c313c38c",
+   "id": "4f704e49",
    "metadata": {},
    "source": [
     "### Export des prédictions pour Kaggle"
@@ -8905,7 +8905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf3c648b",
+   "id": "00e85ae4",
    "metadata": {},
    "source": [
     "#### Entrainement du Xgboostregressor réalisé précedemment"
@@ -8952,7 +8952,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d8bf651",
+   "id": "7d96012e",
    "metadata": {},
    "source": [
     "On observe une légère baisse de performance comparé au modèle contenant toutes les variables \n",
@@ -8974,86 +8974,6 @@
     "with open(\"./Application/modele_xgb_pickle.pkl\", \"wb\") as fichier:\n",
     "    pickle.dump(Xgboost, fichier)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "94af0749",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba5f3ef4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9f538cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d08f501",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfd156e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cefe15f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8281a8e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee04b675",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2f25e7f3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "447979d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
