BIG-DATA-36 Ajustement des derniers commentaires

--- a/Projet_BigData.ipynb
+++ b/Projet_BigData.ipynb
@@ -6682,7 +6682,7 @@
    "source": [
     "# Définir la grille de paramètres\n",
     "grid = { \n",
-    "    'n_estimators': [1000, 2000, 3000],\n",
+    "    'n_estimators': [1000, 2000, 3000],  # Nombre d'arbres\n",
     "    'random_state': [42],\n",
     "    'n_jobs': [-1], # activer tout les coeurs du processeur\n",
     "}\n",
@@ -6737,7 +6737,7 @@
    "source": [
     "# Définir la grille de paramètres\n",
     "grid = {\n",
-    "    'n_estimators': [2000, 3000, 4000],\n",
+    "    'n_estimators': [2000, 3000, 4000],  # Nombre d'arbres\n",
     "    'subsample': [0.5], # Valeur conseillé dans la doc\n",
     "    'nthread': [-1], # activer tout les coeurs du processeur\n",
     "    'learning_rate' : [0.03,0.3], #Taux d'apprentissage pour l'algorithme de gradient boosting. Le diminuer limite le surapprentissage\n",
@@ -6825,7 +6825,7 @@
     "from lightgbm import LGBMRegressor\n",
     "# Définir la grille de paramètres\n",
     "grid = { \n",
-    "    'n_estimators': [2000, 3000, 4000],\n",
+    "    'n_estimators': [2000, 3000, 4000], # Nombre d'arbres\n",
     "    'num_leaves': [4, 6], # Le nombre de feuille par arbre est défini a 31 d'origine on réduit a 10 sinon beaucoup trop long\n",
     "    'nthread': [-1] # activer tout les coeurs du processeur\n",
     "}\n",
@@ -8955,7 +8955,7 @@
    "id": "7d96012e",
    "metadata": {},
    "source": [
-    "On observe une légère baisse de performance comparé au modèle contenant toutes les variables \n",
+    "On observe une légère baisse de performance comparé au modèle contenant toutes les variables.\n",
     "\n",
     "Rmse = 0.1230 -> Rmse = 0.1386"
    ]
